# recorder

./: CMakeLists.txt  README.md  miracle-recorder.desktop
src/translations/: ru_RU.ts  zh_TW.ts
